--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -17,6 +17,12 @@
    padding: 200px
  }
 
+ .spinner{
+     width: 50px;
+     height: 50px;
+    margin: 20rem 55rem;
+ }
+
 /*  
 @media screen and (max-width: 1240px){
   
